--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,8 @@ Build-Depends: cmake,
                libxcomposite-dev,
                libxdamage-dev,
                libxinerama-dev,
-               libxrandr-dev
+               libxrandr-dev,
+               python2.7
 Standards-Version: 3.9.7
 Vcs-Git: https://github.com/BunsenLabs/tint2.git
 Vcs-Browser: https://github.com/BunsenLabs/tint2
